Updated status schema data points
